# MyCMake

./: CMakeLists.txt  README.md  build.sh  configure.sh  install.sh  main.cpp  print_result.h  run.sh
my_math/: CMakeLists.txt
my_math/include/my_math/: addition.h  division.h  multiplication.h  substraction.h
my_math/src/: addition.cpp  division.cpp  multiplication.cpp  substraction.cpp
my_print/: CMakeLists.txt
my_print/src/: print_result.cpp
src/: main.cpp
src/my_math/: CMakeLists.txt
src/my_math/include/: math.hpp
src/my_math/src/: math.cpp
src/my_print/: CMakeLists.txt
src/my_print/include/: print_result.hpp
src/my_print/src/: print_result.cpp
